--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <!-- Intro Section with Heartbeat, Expanding Circles, and Progress Bar -->
     <div class="intro">
-        <div class="heart"><img src="images/fire.gif" alt="Fire Heart"></div>
+        <div class="heart"><img src="images/Fire.gif" alt="Fire Heart"></div>
         <div class="progress-container">
             <div class="progress-bar blue-fill"></div>
             <div class="progress-bar white-fill"></div>
@@ -182,3 +182,4 @@
     </script>
 </body>
 </html>
+
