--- a/Music/pro.html
+++ b/Music/pro.html
@@ -18,8 +18,8 @@
     <label class="checkbox-wrapper">
       <input type="checkbox" class="checkbox-input" onclick="handleCheck(this, 'carousel.html')" />
       <span class="checkbox-tile">
-        <span class="checkbox-icon"><i class="fa-solid fa-guitar"></i></span>
-        <span class="checkbox-label">Guitar Lessons<br><p style="font-size: 10px; color: #aeaeae; text-align:center;">High Quality lessons<br>Pro-Tabs<br>Audio</p></span>
+        <span class="checkbox-icon"><i class="fa-solid fa-layer-group"></i></span>
+        <span class="checkbox-label">Courses<br><p style="font-size: 10px; color: #aeaeae; text-align:center;">High Quality lessons<br>Pro-Tabs<br>Audio</p></span>
       </span>
     </label>
   </div>
@@ -28,8 +28,8 @@
     <label class="checkbox-wrapper">
       <input type="checkbox" class="checkbox-input" onclick="handleCheck(this, 'applet.html')" />
       <span class="checkbox-tile">
-        <span class="checkbox-icon"><i class="fab fa-sketch"></i></span>
-        <span class="checkbox-label">Dashboard<p style="font-size: 10px; color: #aeaeae; text-align:center;">Learning Maximized</p></span>
+        <span class="checkbox-icon"><i class="fa-solid fa-gear"></i></span>
+        <span class="checkbox-label">Tools<p style="font-size: 10px; color: #aeaeae; text-align:center;">Learning Maximized<br>All the tools you need</p></span>
       </span>
     </label>
   </div>
